--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ analytics:
 # Site Author
 author:
   name             : "Shengmiao ('Samuel') Jin"
-  avatar           : "avater.png"
+  avatar           : "avater.jpg"
   bio              : "Roboticist, Computer Scientist, and Electrical Engineer"
   location         : "Champaign, IL"
   employer         :
