--- a/_config.yml
+++ b/_config.yml
@@ -168,9 +168,9 @@ collections:
 #   publications:
 #     output: true
 #     permalink: /:collection/:path/
-  portfolio:
-    output: true
-    permalink: /:collection/:path/
+  # portfolio:
+  #   output: true
+  #   permalink: /:collection/:path/
 #   talks:
 #     output: true
 #     permalink: /:collection/:path/
@@ -215,14 +215,14 @@ defaults:
 #       share: true
 #       comments: true
   # _portfolio
-  - scope:
-      path: ""
-      type: portfolio
-    values:
-      layout: single
-      author_profile: true
-      share: true
-      comment: true
+  # - scope:
+  #     path: ""
+  #     type: portfolio
+  #   values:
+  #     layout: single
+  #     author_profile: true
+  #     share: true
+  #     comment: true
 #   # _talks
 #   - scope:
 #       path: ""
