--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ analytics:
 author:
   name             : "Shengmiao ('Samuel') Jin"
   avatar           : "avater.jpg"
-  bio              : "Roboticist, Computer Scientist, and Electrical Engineer"
+  bio              : "Aspiring Roboticist and Electrical&Computer Engineer, Undergrad @ UIUC"
   location         : "Champaign, IL"
   employer         :
   pubmed           : 
