--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ analytics:
 # Site Author
 author:
   name             : "Shengmiao ('Samuel') Jin"
-  avatar           : "avater.jpg"
+  avatar           : "2.jpg"
   bio              : "Aspiring Roboticist and Electrical&Computer Engineer, Undergrad @ UIUC"
   location         : "Champaign, IL"
   employer         :
