--- a/_config.yml
+++ b/_config.yml
@@ -69,7 +69,7 @@ analytics:
 author:
   name             : "Shengmiao ('Samuel') Jin"
   avatar           : "avater3.jpg"
-  bio              : "Aspiring Roboticist and Electrical&Computer Engineer, Undergrad @ UIUC"
+  bio              : "Aspiring Engineer, Roboticist and Computer Scientist, Undergrad @ UIUC"
   location         : "Champaign, IL"
   employer         :
   pubmed           : 
