--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 
 # Site Settings
 locale                   : "en-US"
-title                    : "Samuel Jin"
+title                    : "Shengmiao Jin"
 title_separator          : "-"
 name                     : &name "Samuel Jin"
 description              : &description "personal description"
