--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,17 +1,13 @@
 # main links links
 main:
+  - title: "About"
+    url: /
   - title: "Publications"
     url: /publications/
-
-  # - title: "Teaching"
-  #   url: /teaching/    
-    
   - title: "CV"
     url: /cv/
-
   - title: "Misc"
     url: /misc/
-
   - title: "Resources"
     url: /resources/
     
