--- a/_config.yml
+++ b/_config.yml
@@ -70,7 +70,7 @@ author:
   name             : "Shengmiao ('Samuel') Jin"
   avatar           : "avater.png"
   bio              : "Incoming Robotics Ph.D. Student @ Cornell University, BS EE @ UIUC"
-  location         : "Champaign, IL"
+  location         : 
   employer         : "Cornell University"
   pubmed           : 
   googlescholar    : "https://scholar.google.com/citations?user=3_C65DEAAAAJ&hl=en"
