--- a/_config.yml
+++ b/_config.yml
@@ -83,20 +83,20 @@ author:
   flickr           :
   facebook         :
   foursquare       :
-  github           : "https://github.com/leumasnij"
+  github           : "leumasnij"
   google_plus      :
   keybase          :
   instagram        :
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
-  linkedin         : "https://www.linkedin.com/in/shengmiao-jin-83994b2a4/"
+  linkedin         : "shengmiao-jin-83994b2a4/"
   orcid            : #"http://orcid.org/yourorcidurl"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
   steam            :
   tumblr           :
-  twitter          : https://x.com/SamuelJin234500
+  twitter          : "SamuelJin234500"
   vine             :
   weibo            :
   xing             :
